seaqt/QtWidgets/gen_qheaderview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QHeaderView QHeaderView;
typedef struct QMetaObject QMetaObject;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
QMetaObject* QHeaderView_metaObject(const QHeaderView* self);
void* QHeaderView_metacast(QHeaderView* self, const char* param1);
int QHeaderView_metacall(QHeaderView* self, int param1, int param2, void** param3);
struct miqt_string QHeaderView_tr(const char* s);
struct miqt_string QHeaderView_trUtf8(const char* s);
void QHeaderView_setModel(QHeaderView* self, QAbstractItemModel* model);
int QHeaderView_orientation(const QHeaderView* self);
int QHeaderView_offset(const QHeaderView* self);
int QHeaderView_length(const QHeaderView* self);
QSize* QHeaderView_sizeHint(const QHeaderView* self);
void QHeaderView_setVisible(QHeaderView* self, bool v);
int QHeaderView_sectionSizeHint(const QHeaderView* self, int logicalIndex);
int QHeaderView_visualIndexAt(const QHeaderView* self, int position);
int QHeaderView_logicalIndexAt(const QHeaderView* self, int position);
int QHeaderView_logicalIndexAt2(const QHeaderView* self, int x, int y);
int QHeaderView_logicalIndexAtWithPos(const QHeaderView* self, QPoint* pos);
int QHeaderView_sectionSize(const QHeaderView* self, int logicalIndex);
int QHeaderView_sectionPosition(const QHeaderView* self, int logicalIndex);
int QHeaderView_sectionViewportPosition(const QHeaderView* self, int logicalIndex);
void QHeaderView_moveSection(QHeaderView* self, int from, int to);
void QHeaderView_swapSections(QHeaderView* self, int first, int second);
void QHeaderView_resizeSection(QHeaderView* self, int logicalIndex, int size);
void QHeaderView_resizeSections(QHeaderView* self, int mode);
bool QHeaderView_isSectionHidden(const QHeaderView* self, int logicalIndex);
void QHeaderView_setSectionHidden(QHeaderView* self, int logicalIndex, bool hide);
int QHeaderView_hiddenSectionCount(const QHeaderView* self);
void QHeaderView_hideSection(QHeaderView* self, int logicalIndex);
void QHeaderView_showSection(QHeaderView* self, int logicalIndex);
int QHeaderView_count(const QHeaderView* self);
int QHeaderView_visualIndex(const QHeaderView* self, int logicalIndex);
int QHeaderView_logicalIndex(const QHeaderView* self, int visualIndex);
void QHeaderView_setSectionsMovable(QHeaderView* self, bool movable);
bool QHeaderView_sectionsMovable(const QHeaderView* self);
void QHeaderView_setFirstSectionMovable(QHeaderView* self, bool movable);
bool QHeaderView_isFirstSectionMovable(const QHeaderView* self);
void QHeaderView_setSectionsClickable(QHeaderView* self, bool clickable);
bool QHeaderView_sectionsClickable(const QHeaderView* self);
void QHeaderView_setHighlightSections(QHeaderView* self, bool highlight);
bool QHeaderView_highlightSections(const QHeaderView* self);
int QHeaderView_sectionResizeMode(const QHeaderView* self, int logicalIndex);
void QHeaderView_setSectionResizeMode(QHeaderView* self, int mode);
void QHeaderView_setSectionResizeMode2(QHeaderView* self, int logicalIndex, int mode);
void QHeaderView_setResizeContentsPrecision(QHeaderView* self, int precision);
int QHeaderView_resizeContentsPrecision(const QHeaderView* self);
int QHeaderView_stretchSectionCount(const QHeaderView* self);
void QHeaderView_setSortIndicatorShown(QHeaderView* self, bool show);
bool QHeaderView_isSortIndicatorShown(const QHeaderView* self);
void QHeaderView_setSortIndicator(QHeaderView* self, int logicalIndex, int order);
int QHeaderView_sortIndicatorSection(const QHeaderView* self);
int QHeaderView_sortIndicatorOrder(const QHeaderView* self);
bool QHeaderView_stretchLastSection(const QHeaderView* self);
void QHeaderView_setStretchLastSection(QHeaderView* self, bool stretch);
bool QHeaderView_cascadingSectionResizes(const QHeaderView* self);
void QHeaderView_setCascadingSectionResizes(QHeaderView* self, bool enable);
int QHeaderView_defaultSectionSize(const QHeaderView* self);
void QHeaderView_setDefaultSectionSize(QHeaderView* self, int size);
void QHeaderView_resetDefaultSectionSize(QHeaderView* self);
int QHeaderView_minimumSectionSize(const QHeaderView* self);
void QHeaderView_setMinimumSectionSize(QHeaderView* self, int size);
int QHeaderView_maximumSectionSize(const QHeaderView* self);
void QHeaderView_setMaximumSectionSize(QHeaderView* self, int size);
int QHeaderView_defaultAlignment(const QHeaderView* self);
void QHeaderView_setDefaultAlignment(QHeaderView* self, int alignment);
void QHeaderView_doItemsLayout(QHeaderView* self);
bool QHeaderView_sectionsMoved(const QHeaderView* self);
bool QHeaderView_sectionsHidden(const QHeaderView* self);
struct miqt_string QHeaderView_saveState(const QHeaderView* self);
bool QHeaderView_restoreState(QHeaderView* self, struct miqt_string state);
void QHeaderView_reset(QHeaderView* self);
void QHeaderView_setOffset(QHeaderView* self, int offset);
void QHeaderView_setOffsetToSectionPosition(QHeaderView* self, int visualIndex);
void QHeaderView_setOffsetToLastSection(QHeaderView* self);
void QHeaderView_headerDataChanged(QHeaderView* self, int orientation, int logicalFirst, int logicalLast);
void QHeaderView_sectionMoved(QHeaderView* self, int logicalIndex, int oldVisualIndex, int newVisualIndex);
void QHeaderView_connect_sectionMoved(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_sectionResized(QHeaderView* self, int logicalIndex, int oldSize, int newSize);
void QHeaderView_connect_sectionResized(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_sectionPressed(QHeaderView* self, int logicalIndex);
void QHeaderView_connect_sectionPressed(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_sectionClicked(QHeaderView* self, int logicalIndex);
void QHeaderView_connect_sectionClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_sectionEntered(QHeaderView* self, int logicalIndex);
void QHeaderView_connect_sectionEntered(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_sectionDoubleClicked(QHeaderView* self, int logicalIndex);
void QHeaderView_connect_sectionDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_sectionCountChanged(QHeaderView* self, int oldCount, int newCount);
void QHeaderView_connect_sectionCountChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QHeaderView_sectionHandleDoubleClicked(QHeaderView* self, int logicalIndex);
void QHeaderView_connect_sectionHandleDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_geometriesChanged(QHeaderView* self);
void QHeaderView_connect_geometriesChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QHeaderView_sortIndicatorChanged(QHeaderView* self, int logicalIndex, int order);
void QHeaderView_connect_sortIndicatorChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
struct miqt_string QHeaderView_tr2(const char* s, const char* c);