seaqt/QtWidgets/gen_qheaderview.nim


proc fcQHeaderView_metaObject(self: pointer, ): pointer {.importc: "QHeaderView_metaObject".}
proc fcQHeaderView_metacast(self: pointer, param1: cstring): pointer {.importc: "QHeaderView_metacast".}
proc fcQHeaderView_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QHeaderView_metacall".}
proc fcQHeaderView_tr(s: cstring): struct_miqt_string {.importc: "QHeaderView_tr".}
proc fcQHeaderView_trUtf8(s: cstring): struct_miqt_string {.importc: "QHeaderView_trUtf8".}
proc fcQHeaderView_setModel(self: pointer, model: pointer): void {.importc: "QHeaderView_setModel".}
proc fcQHeaderView_orientation(self: pointer, ): cint {.importc: "QHeaderView_orientation".}
proc fcQHeaderView_offset(self: pointer, ): cint {.importc: "QHeaderView_offset".}
proc fcQHeaderView_length(self: pointer, ): cint {.importc: "QHeaderView_length".}
proc fcQHeaderView_sizeHint(self: pointer, ): pointer {.importc: "QHeaderView_sizeHint".}
proc fcQHeaderView_setVisible(self: pointer, v: bool): void {.importc: "QHeaderView_setVisible".}
proc fcQHeaderView_sectionSizeHint(self: pointer, logicalIndex: cint): cint {.importc: "QHeaderView_sectionSizeHint".}
proc fcQHeaderView_visualIndexAt(self: pointer, position: cint): cint {.importc: "QHeaderView_visualIndexAt".}
proc fcQHeaderView_logicalIndexAt(self: pointer, position: cint): cint {.importc: "QHeaderView_logicalIndexAt".}
proc fcQHeaderView_logicalIndexAt2(self: pointer, x: cint, y: cint): cint {.importc: "QHeaderView_logicalIndexAt2".}
proc fcQHeaderView_logicalIndexAtWithPos(self: pointer, pos: pointer): cint {.importc: "QHeaderView_logicalIndexAtWithPos".}
proc fcQHeaderView_sectionSize(self: pointer, logicalIndex: cint): cint {.importc: "QHeaderView_sectionSize".}
proc fcQHeaderView_sectionPosition(self: pointer, logicalIndex: cint): cint {.importc: "QHeaderView_sectionPosition".}
proc fcQHeaderView_sectionViewportPosition(self: pointer, logicalIndex: cint): cint {.importc: "QHeaderView_sectionViewportPosition".}
proc fcQHeaderView_moveSection(self: pointer, fromVal: cint, to: cint): void {.importc: "QHeaderView_moveSection".}
proc fcQHeaderView_swapSections(self: pointer, first: cint, second: cint): void {.importc: "QHeaderView_swapSections".}
proc fcQHeaderView_resizeSection(self: pointer, logicalIndex: cint, size: cint): void {.importc: "QHeaderView_resizeSection".}
proc fcQHeaderView_resizeSections(self: pointer, mode: cint): void {.importc: "QHeaderView_resizeSections".}
proc fcQHeaderView_isSectionHidden(self: pointer, logicalIndex: cint): bool {.importc: "QHeaderView_isSectionHidden".}
proc fcQHeaderView_setSectionHidden(self: pointer, logicalIndex: cint, hide: bool): void {.importc: "QHeaderView_setSectionHidden".}
proc fcQHeaderView_hiddenSectionCount(self: pointer, ): cint {.importc: "QHeaderView_hiddenSectionCount".}
proc fcQHeaderView_hideSection(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_hideSection".}
proc fcQHeaderView_showSection(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_showSection".}
proc fcQHeaderView_count(self: pointer, ): cint {.importc: "QHeaderView_count".}
proc fcQHeaderView_visualIndex(self: pointer, logicalIndex: cint): cint {.importc: "QHeaderView_visualIndex".}
proc fcQHeaderView_logicalIndex(self: pointer, visualIndex: cint): cint {.importc: "QHeaderView_logicalIndex".}
proc fcQHeaderView_setSectionsMovable(self: pointer, movable: bool): void {.importc: "QHeaderView_setSectionsMovable".}
proc fcQHeaderView_sectionsMovable(self: pointer, ): bool {.importc: "QHeaderView_sectionsMovable".}
proc fcQHeaderView_setFirstSectionMovable(self: pointer, movable: bool): void {.importc: "QHeaderView_setFirstSectionMovable".}
proc fcQHeaderView_isFirstSectionMovable(self: pointer, ): bool {.importc: "QHeaderView_isFirstSectionMovable".}
proc fcQHeaderView_setSectionsClickable(self: pointer, clickable: bool): void {.importc: "QHeaderView_setSectionsClickable".}
proc fcQHeaderView_sectionsClickable(self: pointer, ): bool {.importc: "QHeaderView_sectionsClickable".}
proc fcQHeaderView_setHighlightSections(self: pointer, highlight: bool): void {.importc: "QHeaderView_setHighlightSections".}
proc fcQHeaderView_highlightSections(self: pointer, ): bool {.importc: "QHeaderView_highlightSections".}
proc fcQHeaderView_sectionResizeMode(self: pointer, logicalIndex: cint): cint {.importc: "QHeaderView_sectionResizeMode".}
proc fcQHeaderView_setSectionResizeMode(self: pointer, mode: cint): void {.importc: "QHeaderView_setSectionResizeMode".}
proc fcQHeaderView_setSectionResizeMode2(self: pointer, logicalIndex: cint, mode: cint): void {.importc: "QHeaderView_setSectionResizeMode2".}
proc fcQHeaderView_setResizeContentsPrecision(self: pointer, precision: cint): void {.importc: "QHeaderView_setResizeContentsPrecision".}
proc fcQHeaderView_resizeContentsPrecision(self: pointer, ): cint {.importc: "QHeaderView_resizeContentsPrecision".}
proc fcQHeaderView_stretchSectionCount(self: pointer, ): cint {.importc: "QHeaderView_stretchSectionCount".}
proc fcQHeaderView_setSortIndicatorShown(self: pointer, show: bool): void {.importc: "QHeaderView_setSortIndicatorShown".}
proc fcQHeaderView_isSortIndicatorShown(self: pointer, ): bool {.importc: "QHeaderView_isSortIndicatorShown".}
proc fcQHeaderView_setSortIndicator(self: pointer, logicalIndex: cint, order: cint): void {.importc: "QHeaderView_setSortIndicator".}
proc fcQHeaderView_sortIndicatorSection(self: pointer, ): cint {.importc: "QHeaderView_sortIndicatorSection".}
proc fcQHeaderView_sortIndicatorOrder(self: pointer, ): cint {.importc: "QHeaderView_sortIndicatorOrder".}
proc fcQHeaderView_stretchLastSection(self: pointer, ): bool {.importc: "QHeaderView_stretchLastSection".}
proc fcQHeaderView_setStretchLastSection(self: pointer, stretch: bool): void {.importc: "QHeaderView_setStretchLastSection".}
proc fcQHeaderView_cascadingSectionResizes(self: pointer, ): bool {.importc: "QHeaderView_cascadingSectionResizes".}
proc fcQHeaderView_setCascadingSectionResizes(self: pointer, enable: bool): void {.importc: "QHeaderView_setCascadingSectionResizes".}
proc fcQHeaderView_defaultSectionSize(self: pointer, ): cint {.importc: "QHeaderView_defaultSectionSize".}
proc fcQHeaderView_setDefaultSectionSize(self: pointer, size: cint): void {.importc: "QHeaderView_setDefaultSectionSize".}
proc fcQHeaderView_resetDefaultSectionSize(self: pointer, ): void {.importc: "QHeaderView_resetDefaultSectionSize".}
proc fcQHeaderView_minimumSectionSize(self: pointer, ): cint {.importc: "QHeaderView_minimumSectionSize".}
proc fcQHeaderView_setMinimumSectionSize(self: pointer, size: cint): void {.importc: "QHeaderView_setMinimumSectionSize".}
proc fcQHeaderView_maximumSectionSize(self: pointer, ): cint {.importc: "QHeaderView_maximumSectionSize".}
proc fcQHeaderView_setMaximumSectionSize(self: pointer, size: cint): void {.importc: "QHeaderView_setMaximumSectionSize".}
proc fcQHeaderView_defaultAlignment(self: pointer, ): cint {.importc: "QHeaderView_defaultAlignment".}
proc fcQHeaderView_setDefaultAlignment(self: pointer, alignment: cint): void {.importc: "QHeaderView_setDefaultAlignment".}
proc fcQHeaderView_doItemsLayout(self: pointer, ): void {.importc: "QHeaderView_doItemsLayout".}
proc fcQHeaderView_sectionsMoved(self: pointer, ): bool {.importc: "QHeaderView_sectionsMoved".}
proc fcQHeaderView_sectionsHidden(self: pointer, ): bool {.importc: "QHeaderView_sectionsHidden".}
proc fcQHeaderView_saveState(self: pointer, ): struct_miqt_string {.importc: "QHeaderView_saveState".}
proc fcQHeaderView_restoreState(self: pointer, state: struct_miqt_string): bool {.importc: "QHeaderView_restoreState".}
proc fcQHeaderView_reset(self: pointer, ): void {.importc: "QHeaderView_reset".}
proc fcQHeaderView_setOffset(self: pointer, offset: cint): void {.importc: "QHeaderView_setOffset".}
proc fcQHeaderView_setOffsetToSectionPosition(self: pointer, visualIndex: cint): void {.importc: "QHeaderView_setOffsetToSectionPosition".}
proc fcQHeaderView_setOffsetToLastSection(self: pointer, ): void {.importc: "QHeaderView_setOffsetToLastSection".}
proc fcQHeaderView_headerDataChanged(self: pointer, orientation: cint, logicalFirst: cint, logicalLast: cint): void {.importc: "QHeaderView_headerDataChanged".}
proc fcQHeaderView_sectionMoved(self: pointer, logicalIndex: cint, oldVisualIndex: cint, newVisualIndex: cint): void {.importc: "QHeaderView_sectionMoved".}
proc fcQHeaderView_connect_sectionMoved(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint, oldVisualIndex: cint, newVisualIndex: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionMoved".}
proc fcQHeaderView_sectionResized(self: pointer, logicalIndex: cint, oldSize: cint, newSize: cint): void {.importc: "QHeaderView_sectionResized".}
proc fcQHeaderView_connect_sectionResized(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint, oldSize: cint, newSize: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionResized".}
proc fcQHeaderView_sectionPressed(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_sectionPressed".}
proc fcQHeaderView_connect_sectionPressed(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionPressed".}
proc fcQHeaderView_sectionClicked(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_sectionClicked".}
proc fcQHeaderView_connect_sectionClicked(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionClicked".}
proc fcQHeaderView_sectionEntered(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_sectionEntered".}
proc fcQHeaderView_connect_sectionEntered(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionEntered".}
proc fcQHeaderView_sectionDoubleClicked(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_sectionDoubleClicked".}
proc fcQHeaderView_connect_sectionDoubleClicked(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionDoubleClicked".}
proc fcQHeaderView_sectionCountChanged(self: pointer, oldCount: cint, newCount: cint): void {.importc: "QHeaderView_sectionCountChanged".}
proc fcQHeaderView_connect_sectionCountChanged(self: pointer, slot: int, callback: proc (slot: int, oldCount: cint, newCount: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionCountChanged".}
proc fcQHeaderView_sectionHandleDoubleClicked(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_sectionHandleDoubleClicked".}
proc fcQHeaderView_connect_sectionHandleDoubleClicked(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sectionHandleDoubleClicked".}
proc fcQHeaderView_geometriesChanged(self: pointer, ): void {.importc: "QHeaderView_geometriesChanged".}
proc fcQHeaderView_connect_geometriesChanged(self: pointer, slot: int, callback: proc (slot: int) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_geometriesChanged".}
proc fcQHeaderView_sortIndicatorChanged(self: pointer, logicalIndex: cint, order: cint): void {.importc: "QHeaderView_sortIndicatorChanged".}
proc fcQHeaderView_connect_sortIndicatorChanged(self: pointer, slot: int, callback: proc (slot: int, logicalIndex: cint, order: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QHeaderView_connect_sortIndicatorChanged".}
proc fcQHeaderView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QHeaderView_tr2".}
